EZ-1323 refactor to course groups, create groups service
